--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container">
     <div id="div-login">
         <p id="title">Inizia a <span>giocare</span>, accedi al sito!</p>
@@ -12,6 +13,6 @@
             </div>
             <button type="submit" class="btn-login">Login</button>
         </form>
-        <p class="register-link">Non sei ancora <span>registrato</span>? <a href="/register">Clicca qui</a></p>
+        <p class="register-link">Non sei ancora registrato? <a href="/register">Clicca qui</a></p>
     </div>
 </div>
