--- a/frontend/src/app/components/multiple-choice/multiple-choice.component.html
+++ b/frontend/src/app/components/multiple-choice/multiple-choice.component.html
@@ -5,9 +5,7 @@
     </div>
     <div class="div-multiple-choice" *ngFor="let item of multipleChoices">
         <div class="div-info">
-            <div id="div-text"><label><span class="span-header">Scenario iniziale</span><br><span class="span-text">{{ item.id_scenario }}</span></label></div>
-            <p></p>
-            <div id="div-text"><label><span class="span-header">Scenario successivo</span><br><span class="span-text">{{ item.id_scenario_successivo }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Scenario di destinazione</span><br><span class="span-text">{{ item.id_scenario_successivo }}</span></label></div>
             <p></p>
             <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
             <p></p>
@@ -23,8 +21,6 @@
     </div>
     <div class="div-multiple-choice" *ngFor="let item of multipleChoices">
         <div class="div-info">
-            <div id="div-text"><label><span class="span-header">Scenario iniziale</span><br><span class="span-text">{{ item.id_scenario }}</span></label></div>
-            <p></p>
             <div id="div-text"><label><span class="span-header">Scenario successivo</span><br><span class="span-text">{{ item.id_scenario_successivo }}</span></label></div>
             <p></p>
             <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
