--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container">
     <div id="div-register">
     <p id="title">Registrati e inizia a <span>giocare</span>!</p>
@@ -12,6 +13,6 @@
             </div>
             <button type="submit" class="btn-register">Registrati</button>
         </form>
-        <p class="register-link">Ci hai <span>ripensato</span>? <a href="/home">Torna alla home</a></p>
+        <p class="register-link">Hai già un account? <a href="/login">Clicca qui</a></p>
     </div>
 </div>
