--- a/frontend/src/app/components/home-stories/home-stories.component.html
+++ b/frontend/src/app/components/home-stories/home-stories.component.html
@@ -10,6 +10,6 @@
             <div id="div-text"><label><span class="span-header">Categoria</span><br><span class="span-text">{{ item.categoria }}</span></label></div>
         </div>
         <div class="div-button" *ngIf="!item.statoCompletamento"><button (click)="editStory(item)">Modifica</button></div>
-        <div class="div-button" *ngIf="item.statoCompletamento"><button (click)="editStory(item)">Modifica</button></div>
+        <div class="div-button" *ngIf="item.statoCompletamento"><button (click)="editStory(item)">Modifica testo</button></div>
     </div>
 </div>
