--- a/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
+++ b/frontend/src/app/components/form-multiple-choice/form-multiple-choice.component.html
@@ -7,18 +7,18 @@
         <div class="div-form">
             <form (ngSubmit)="onSubmit()">
                 <div class="single-form">
-                    <label for="testo">Testo</label>
+                    <label for="testo">Testo<span>*</span></label>
                     <textarea id="testo" name="testo" required [(ngModel)]="testo"></textarea>
                 </div>
                 <div class="single-form">
-                    <label for="idScenarioSuccessivo">Scenario successivo alla risposta</label>
+                    <label for="idScenarioSuccessivo">Scenario successivo alla risposta<span>*</span></label>
                     <select id="idScenarioSuccessivo" name="idScenarioSuccessivo" required [(ngModel)]="idScenarioSuccessivo">
                         <option disabled>Id dello scenario successivo</option>
                         <option *ngFor="let scenario of storyScenarios" [value]="scenario.id">{{ scenario.testo }} [ID: {{scenario.id }}]</option>
                     </select>
                 </div>
                 <div class="single-form">
-                    <label for="objectSelect">Oggetto</label>
+                    <label for="objectSelect">Oggetto Richiesto dalla scelta<span>*</span></label>
                     <select id="objectSelect" name="objectSelect" [(ngModel)]="selectedObjectId">
                         <option disabled>Nome dell'oggetto</option>
                         <option *ngFor="let obj of storyObjects" [value]="obj.id">{{ obj.nome }}</option>
