modifica al messaggio di benvenuto

--- a/frontend/src/app/components/stor-jpage/stor-jpage.component.html
+++ b/frontend/src/app/components/stor-jpage/stor-jpage.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">    
     <div class="div-welcome">
-        <p id="title">Ciao <span>Matteo</span>, bentornato su <span>storJ</span>!</p>
+        <p id="title">Ciao <span>{{ username }}</span>, bentornato su <span>storJ</span>!</p>
         <p>Per poter giocare ad una <span>storia interattiva</span> clicca il bottone <span id="span-button">Gioca</span>!</p>
         <p>Attenzione, per poter giocare devi effettuare un <span>pagamento</span>, clicca sul bottone <span id="span-button">Paga</span> posto sulla navbar in <span>alto</span>.</p>
         <p>Per poter creare una <span>storia interattiva</span> clicca il bottone <span id="span-button">Crea</span>.</p>
