--- a/frontend/src/app/components/home-stories/home-stories.component.html
+++ b/frontend/src/app/components/home-stories/home-stories.component.html
@@ -13,7 +13,7 @@
         <div class="div-button" *ngIf="item.statoCompletamento"><button (click)="editStory(item)">Modifica testo</button>
         </div>
         <div class="div-button">
-            <div class="div-button-scenario" *ngIf="!item.statoCompletamento"><button (click)="removeStory(item.id)">Rimuovi</button></div>
+            <div class="div-button-scenario"><button (click)="removeStory(item.id)">Rimuovi</button></div>
         </div>
     </div>
 </div>
