--- a/frontend/src/app/components/create-story/create-story.component.html
+++ b/frontend/src/app/components/create-story/create-story.component.html
@@ -12,6 +12,10 @@
             <div id="div-text"><label><span class="span-header">Tipologia scenario</span><br><span class="span-text">{{ item.tipo_scenario }}</span></label></div>
             <p></p>
             <div id="div-text" *ngIf="item.tipo_scenario !== 'FINALE'"><label><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
+            <p *ngIf="item.tipo_scenario == 'FINALE'"></p>
+            <div id="div-text div-hidden" *ngIf="item.tipo_scenario == 'FINALE'"><label id="label-hidden"><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
+            <p *ngIf="item.tipo_scenario == 'FINALE'"></p>
+            <div id="div-text div-hidden" *ngIf="item.tipo_scenario == 'FINALE'"><label id="label-hidden"><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
             <div class="div-button">
                 <div class="div-button-scenario"><button (click)="redirectToScenarioType(item,item.tipo_risposta)">Scelte</button></div>
             </div>
