--- a/frontend/src/app/components/create-story/create-story.component.html
+++ b/frontend/src/app/components/create-story/create-story.component.html
@@ -4,18 +4,29 @@
         <p id="title">Divertiti e crea i tuoi <span>scenari</span></p>
     </div>
     <div class="div-scenario" *ngFor="let item of scenarios">
-        <div class="div-info">
+        <div class="div-info" *ngIf="item.tipo_scenario !== 'FINALE'">
             <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
             <p></p>
-            <div id="div-text" *ngIf="item.tipo_scenario !== 'FINALE'"><label><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
             <p></p>
             <div id="div-text"><label><span class="span-header">Tipologia scenario</span><br><span class="span-text">{{ item.tipo_scenario }}</span></label></div>
             <p></p>
-            <div id="div-text" *ngIf="item.tipo_scenario !== 'FINALE'"><label><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
-            <p *ngIf="item.tipo_scenario == 'FINALE'"></p>
-            <div id="div-text div-hidden" *ngIf="item.tipo_scenario == 'FINALE'"><label id="label-hidden"><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
-            <p *ngIf="item.tipo_scenario == 'FINALE'"></p>
-            <div id="div-text div-hidden" *ngIf="item.tipo_scenario == 'FINALE'"><label id="label-hidden"><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
+            <div class="div-button">
+                <div class="div-button-scenario"><button (click)="redirectToScenarioType(item,item.tipo_risposta)">Scelte</button></div>
+            </div>
+            <div class="div-button">
+                <div class="div-button-scenario"><button (click)="removeScenario(item.id)">Rimuovi</button></div>
+            </div>
+        </div>
+        <div class="div-info" *ngIf="item.tipo_scenario === 'FINALE'">
+            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
+            <p></p>
+            <div id="div-text"><label><span class="span-header">Tipologia scenario</span><br><span class="span-text">{{ item.tipo_scenario }}</span></label></div>
+            <p></p>
+            <div id="div-text-hidden"><label id="label-hidden"><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
+            <p></p>
+            <div id="div-text-hidden"><label id="label-hidden"><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
             <div class="div-button">
                 <div class="div-button-scenario"><button (click)="redirectToScenarioType(item,item.tipo_risposta)">Scelte</button></div>
             </div>
@@ -31,14 +42,29 @@
         <p id="title">Divertiti e crea i tuoi <span>scenari</span></p>
     </div>
     <div class="div-scenario" *ngFor="let item of scenarios">
-        <div class="div-info">
+        <div class="div-info" *ngIf="item.tipo_scenario !== 'FINALE'">
             <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
             <p></p>
-            <div id="div-text" *ngIf="item.tipo_scenario !== 'FINALE'"><label><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
             <p></p>
             <div id="div-text"><label><span class="span-header">Tipologia scenario</span><br><span class="span-text">{{ item.tipo_scenario }}</span></label></div>
             <p></p>
-            <div id="div-text" *ngIf="item.tipo_scenario !== 'FINALE'"><label><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
+            <div id="div-text"><label><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
+            <div class="div-button">
+                <div class="editScenarioText-button"><button (click)="editScenarioText(item)">Modifica scenario</button></div>
+            </div>
+            <div class="div-button">
+                <div class="remove-button"><button (click)="redirectToScenarioType(item,item.tipo_risposta)">Modifica scelte</button></div>
+            </div>
+        </div>
+        <div class="div-info" *ngIf="item.tipo_scenario === 'FINALE'">
+            <div id="div-text"><label><span class="span-header">Testo</span><br><span class="span-text">{{ item.testo }}</span></label></div>
+            <p></p>
+            <div id="div-text"><label><span class="span-header">Tipologia scenario</span><br><span class="span-text">{{ item.tipo_scenario }}</span></label></div>
+            <p></p>
+            <div id="div-text-hidden"><label id="label-hidden"><span class="span-header">Tipologia risposta</span><br><span class="span-text">{{ item.tipo_risposta }}</span></label></div>
+            <p></p>
+            <div id="div-text-hidden"><label id="label-hidden"><span class="span-header">Oggetto associato</span><br><span class="span-text">{{ dropMap.get(item.id) }}</span></label></div>
             <div class="div-button">
                 <div class="editScenarioText-button"><button (click)="editScenarioText(item)">Modifica scenario</button></div>
             </div>
