--- a/frontend/src/app/components/form-scenario/form-scenario.component.css
+++ b/frontend/src/app/components/form-scenario/form-scenario.component.css
@@ -12,6 +12,7 @@
 .div-scenario {
     display: inline;
     text-align: center !important;
+    align-items: center;
     width: 40%;
     height: auto;
     margin-top: 5rem;
@@ -46,6 +47,7 @@ span {
 }
 
 label {
+    font-size: 11pt;
     display: block;
 }
 
@@ -56,11 +58,11 @@ label:hover {
 
 #label-left {
     float: left;
-    margin-left: 1.2rem;
+    margin-left: 1.5rem;
 }
 
 textarea {
-    font-size: 8pt;
+    font-size: 11pt;
     width: 93.5%;
     height: 150px;
     box-sizing: border-box;
@@ -68,7 +70,7 @@ textarea {
 }
 
 #tipoRisposta, #tipoScenario {
-    font-size: 9pt;
+    font-size: 11pt;
     box-sizing: border-box;
     width: 100%;
     margin-top: 0.5rem;
@@ -79,7 +81,7 @@ textarea {
 }
 
 input {
-    font-size: 9pt;
+    font-size: 11pt;
     box-sizing: border-box;
     width: 100%;
     margin-top: 0.5rem;
@@ -95,9 +97,9 @@ input {
 }
 
 #objectSelect {
-    font-size: 9pt;
+    font-size: 11pt;
     box-sizing: border-box;
-    width: 93.5%;
+    width: 92.5%;
     margin-top: 0.5rem;
     padding: 8px;
     border: 1px solid #ccc;
@@ -120,7 +122,7 @@ button {
     padding: 7.5px 7.5px;
     background-color: crimson;
     border: none !important;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 button:hover {
