--- a/frontend/src/app/components/form-scenario/form-scenario.component.html
+++ b/frontend/src/app/components/form-scenario/form-scenario.component.html
@@ -7,14 +7,6 @@
                 <label id="label-left" for="testo">Testo<span>*</span></label>
                 <textarea id="testo" name="testo" required [(ngModel)]="testo"></textarea>
             </div>
-            <div *ngIf="tipoScenario !== 'FINALE'" class="div-select">
-                <label for="tipoRisposta">Risposta<span>*</span></label>
-                <select id="tipoRisposta" name="tipoRisposta" required [(ngModel)]="tipoRisposta">
-                    <option disabled>Tipologia di risposta</option>
-                    <option value="INDOVINELLO">Indovinello</option>
-                    <option value="MULTIPLA">Multipla</option>
-                </select>
-            </div>
             <div class="div-select">
                 <label for="tipoScenario">Scenario<span>*</span></label>
                 <select id="tipoScenario" name="tipoScenario" required [(ngModel)]="tipoScenario">
@@ -24,7 +16,15 @@
                     <option value="FINALE">Finale</option>
                 </select>
             </div>
-            <div *ngIf="tipoScenario !== 'FINALE'" class="div-object">
+            <div class="div-select" *ngIf="tipoScenario !== 'FINALE'">
+                <label for="tipoRisposta">Risposta<span>*</span></label>
+                <select id="tipoRisposta" name="tipoRisposta" required [(ngModel)]="tipoRisposta">
+                    <option disabled>Tipologia di risposta</option>
+                    <option value="INDOVINELLO">Indovinello</option>
+                    <option value="MULTIPLA">Multipla</option>
+                </select>
+            </div>
+            <div class="div-object" *ngIf="tipoScenario !== 'FINALE'">
                 <label id="label-left" for="objectSelect">Nome Oggetto</label>
                 <select id="objectSelect" name="objectSelect" [(ngModel)]="selectedObjectId">
                     <option disabled>Nome oggetto</option>
