--- a/frontend/src/app/components/form-story/form-story.component.css
+++ b/frontend/src/app/components/form-story/form-story.component.css
@@ -14,7 +14,7 @@
     display: inline;
     text-align: center;
     width: 25%;
-    height: 300px;
+    height: 275px;
     margin-top: 5rem;
     padding: 25px 25px;
     background-color: rgb(244, 244, 244);
@@ -23,7 +23,7 @@
 }
 
 #title {
-    font-size: 18pt;
+    font-size: 20pt;
     font-weight: bold;
     gap: 1rem;
 }
@@ -44,13 +44,17 @@ span {
     gap: 2rem;
 }
 
+label {
+    font-size: 11pt;
+}
+
 label:hover {
     transition: color 0.5s;
     color: darkred;
 }
 
 input {
-    font-size: 9pt;
+    font-size: 11pt;
     box-sizing: border-box;
     width: 100%;
     margin-top: 0.5rem;
@@ -71,11 +75,10 @@ button {
     width: 90%;
     height: auto;
     margin-top: 1rem;
-    margin-bottom: 1rem;
     padding: 7.5px 7.5px;
     background-color: crimson;
     border: none !important;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 button:hover {
