--- a/frontend/src/app/components/stor-jpage/stor-jpage.component.css
+++ b/frontend/src/app/components/stor-jpage/stor-jpage.component.css
@@ -1,16 +1,20 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     text-decoration: none;
+    margin-top: 15rem;
 }
 
 .div-welcome {
     font-family: Arial, sans-serif;
-    margin-top: 7.5rem;
     padding: 40px 40px;
-    width: 30%;
+    width: 35%;
     background-color: rgb(244, 244, 244);
     border-radius: 10px;
     text-align: justify;
@@ -26,7 +30,7 @@
 
 p {
     text-align: left;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 span {
